added email confirmation when creating account

--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,6 @@ DB_PORT=5432
 DB_USER=postgres
 DB_NAME=postgres
 DB_PASSWORD=password
+SENDGRID_API_KEY=xxxxxx
+CONFIRM_EMAIL_TEMPLATE_ID=xxxxx
+REDIS_HOST=localhost
