added email confirmation and password reset confirmation handlers

--- a/.env.example
+++ b/.env.example
@@ -5,4 +5,5 @@ DB_NAME=postgres
 DB_PASSWORD=password
 SENDGRID_API_KEY=xxxxxx
 CONFIRM_EMAIL_TEMPLATE_ID=xxxxx
+RESET_PASSWORD_TEMPLATE_ID=xxxxx
 REDIS_HOST=localhost
